Fix issue with Note elements changing sizes when searching for notes on mobile devices

--- a/src/app/css/components/loader.css
+++ b/src/app/css/components/loader.css
@@ -86,24 +86,24 @@
 }
 
 .loader__text {
-  font-size: 1.7rem;
+  font-size: 1.6rem;
 }
 
 @media (min-width: 411px) {
   .loader__text {
-    font-size: 1.9rem;
+    font-size: 1.8rem;
   }
 }
 
 @media (min-width: 768px) {
   .loader__text {
-    font-size: 2.3rem;
+    font-size: 2.2rem;
   }
 }
 
 @media (min-width: 1024px) {
   .loader__text {
-    font-size: 3.2rem;
+    font-size: 3.1rem;
   }
 }
 
